fix android push notifs and auto sync after login to a new device
